Closed Bug 394832 Opened 18 years ago Closed 18 years ago

Underline too close to text

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

()

Details

Attachments

(1 file)

Regression from fix for 394109. Now, when I go to the Firefox start page at Google, on Mac I'm seeing the underlines for some of the words (e.g. "Images", "Words", "Groups") touching the text.
I've been seeing "underline touches text" issues for longer than that.
So have I, but these particular ones appeared just after that checkin.
I think that this is a same bug of bug 380026. I think that this is really gfx/thebes bug. Because the underline position of metrics is wrong. See bug 380026 comment 3.
roc: I fixed bug 380026, I hope that you check this bug.
Attached patch fixSplinter Review
Okay, the issue here is that the calculation of 'ascent' does an integer division and loses precision. Making it a float division fixes the bug.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #280279 - Flags: review?(smontagu)
Attachment #280279 - Flags: review?(smontagu) → review+
Comment on attachment 280279 [details] [diff] [review] fix a1.9=dbaron
Attachment #280279 - Flags: approval1.9? → approval1.9+
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Depends on: 396809
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: