Bug 394832. Remove overeager rounding that causes underlines to appear too close to the text. r=smontagu,a=dbaron